# GenAI-Usecases

./: .gitignore  CLAUDE.md  CLAUDE_COMMANDS.md  README.md
FM_Eval/: README.md  requirements.txt
Graph-db/: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
Graph-db/app/: __init__.py  main.py
Graph-db/app/api/: routes.py
Graph-db/app/config/: logging.py  settings.py
Graph-db/app/db/: neo4j_client.py  postgres_client.py
Graph-db/app/domain/: __init__.py  models.py  risk.py
Graph-db/app/etl/: loader.py  migrate_schema.py  run_full_load.py  transforms.py
Graph-db/app/gds/: __init__.py  jobs.py  run_gds_jobs.py
Graph-db/app/ontology/: __init__.py  run_translate.py  translator.py
Graph-db/app/services/: ingest_service.py  repository.py  risk_service.py  rule_engine.py
Graph-db/app/ui/: streamlit_app.py
Graph-db/cypher/: analytics_examples.cypher  schema.cypher
Graph-db/cypher/migrations/: 001__base_constraints_indexes.cypher  002__risk_feature_indexes.cypher
Graph-db/data/sample/: borrowers.csv  documents.csv  incomes.csv  loans.csv  properties.csv  regulations.csv  rules.csv
Graph-db/docs/assets/: README.md
Graph-db/exports/: mapping.yaml
Graph-db/ontology/: overrides.yaml  sample_mortgage.ttl
Graph-db/scripts/: export_metrics.py
Graph-db/tests/: test_api.py  test_migrations.py  test_risk_scoring.py  test_transforms.py
Healthcare_Assistant/: DOCUMENTATION.md  USAGE.md  requirements.txt
Healthcare_Assistant_Local_llm/: .env.example  DOCUMENTATION.md  USAGE.md  requirements.txt
LLM_FineTuning/: eda.ipynb
(+132 files in other folders)
